<resources>
    <string name="app_name">ChatLog</string>
    <string name="app_name_uppercase">CHATLOG</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login">Войти</string>

    <string name="capability1">Игры</string>
    <string name="capability2">Новости для геймеров</string>
    <string name="capability3">Удобный мессенджер</string>
    <string name="capability4">Облачное хранилище</string>
    <string name="capability5">Реклама игр</string>
    <string name="app_description">Chatlog - это уютная и безопасная социальная сеть для геймеров. Здесь можно вести свой блог, создать свой канал, заводить друзей, переписываться, обмениваться файлами, в удобной форме создавать и выкладывать объявления о продаже игровых аккаунтов и тп.</string>
    <string name="help">Возникла ошибка?</string>
    <string name="support_title">Напишите сообщение об ошибке</string>
    <string name="support_hint">Ваше сообщение</string>
    <string name="support_button">Отправить</string>
    <string name="login_title">Вход</string>
    <string name="register_title">Регистрация</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="login_email_hint">Введите свой email</string>
    <string name="register_email_hint">Введите email</string>
    <string name="login_password_hint">Введите пароль</string>
    <string name="register_name_hint">Введите имя</string>
    <string name="register_surname_hint">Введите фамилию</string>
    <string name="register_date_title">Введите дату рождения</string>
    <string name="register_date_hint">Например: 01.01.2001 (необязательно)</string>
    <string name="register_password_hint1">Придумайте пароль</string>
    <string name="register_password_hint2">Повторите пароль</string>
    <string name="register_country_hint">Ваша страна (необязательно)</string>
    <string name="register_city_hint">Ваш город (необязательно)</string>
    <string name="update_profile_hint">О себе (необязательно)</string>

    <string name="register_password_small_error">Пароль должен содержать не менее 8 символов</string>
    <string name="register_passwords_not_match_error">Пароли должны совпадать</string>
    <string name="register_email_error">Не правильно введен email</string>
    <string name="register_date_error">Не правильно введена дата рождения</string>
    <string name="register_password_error">Введите пароль</string>
    <string name="register_name_error">Введите имя или псевдоним</string>

    <string name="login_error">Введены некорректные данные</string>
    <string name="login_email_error">Введен некорректный email</string>
    <string name="login_password_error">Пароль не должен быть пустым</string>

    <string name="home_default_greeting">Доброго времени суток</string>
    <string name="home_default_time">00:00:00</string>
    <string name="home_default_city">Ваш город</string>
    <string name="home_default_text">0, Хорошая погода</string>
    <string name="home_default_news">У Вас пока нет новостей</string>
    <string name="home_friends_news">Новости друзей</string>
    <string name="home_publics_news">Новости групп</string>

    <string name="loading">Loading...</string>

    <string name="nav_home">Главная</string>
    <string name="nav_profile">Профиль</string>
    <string name="nav_people">Люди</string>
    <string name="nav_messenger">Сообщения</string>
    <string name="nav_other">...</string>

    <string name="link_cloud">Хранилище</string>
    <string name="link_games">Игры</string>
    <string name="link_videos">Видеоблогер</string>
    <string name="link_ads">Объявления</string>
    <string name="link_adverts">Реклама</string>
    <string name="link_shop">Магазин</string>
    <string name="link_quit">Выйти</string>

    <string name="likes">0</string>
    <string name="view_all_images">Посмотреть все изображения</string>
    <string name="view_all_images_back">Вернуться назад</string>
    <string name="send">Отправить</string>
    <string name="comment_hint">Ваш комментарий</string>
    <string name="no_comments">Здесь пока нет комментариев</string>
    <string name="go_back">Назад</string>


    <string name="user_item_button">Переписка</string>
    <string name="user_test">Информация о пользователе</string>

    <string name="user_name">Username</string>
    <string name="user_date">Userdate</string>
    <string name="user_place">Userplace</string>
    <string name="user_about_me">About Me</string>
    <string name="user_friend">Friend</string>
    <string name="user_friends">Friends</string>
    <string name="user_friends_button">Добавить в друзья</string>
    <string name="user_message_button">Переписка</string>
    <string name="user_create_button">Новая запись</string>
    <string name="user_update_button">Обновить профиль</string>
    <string name="delete_notification">Удалить уведомление</string>
    <string name="user_notifications_button">Уведомления</string>
    <string name="already_in_friends">У вас в друзьях</string>
    <string name="waiting_for_friends">Отправлена заявка</string>
    <string name="friends_request">Вы отправили заявку в друзья</string>

    <string name="update_profile_title">Обновление профиля</string>
    <string name="update_profile_add_avatar">Добавить аватар</string>
    <string name="update_profile_add_banner">Добавить баннер</string>
    <string name="update_profile_button">Обновить</string>

    <string name="notification_check_profile">Посмотреть профиль</string>
    <string name="notification_reply">Принять</string>
    <string name="notification_reject">Отклонить</string>
    <string name="notification_check">Профиль</string>
    <string name="already_friends">Теперь вы друзья</string>
    <string name="rejected">Заявка в друзья отклонена</string>
    <string name="file_ok">Файл получен</string>
    <string name="file_rejected">Вы успешно получили файл</string>
    <string name="delete">Удалить</string>

    <string name="create_post_title">Создание записи</string>
    <string name="create_post_upload_image">Выбрать фото</string>
    <string name="create_post_text_hint">Что бы Вы хотели написать</string>
    <string name="create_post_send">Опубликовать</string>
    <string name="remove">✖</string>
    <string name="remove_from_friends">Удалить из друзей</string>
    <string name="removed_from_friends">Вы удалили пользователя из друзей</string>
    <string name="write_message_hint">Напишите сообщение</string>

    <string name="not_activated">Ваш профиль не активирован. На указанную почту должно прийти письмо с ссылкой на активацию.</string>
    <string name="delete_profile">Удалить профиль вы сможете на сайте.</string>
    <string name="delete_message">Удалить</string>
    <string name="edit_message">Редактировать</string>
    <string name="cancel">Отмена</string>
    <string name="voice">Голосовое сообщение</string>
    <string name="record_text">Начать запись</string>
    <string name="recording_text">Идет запись...</string>

    <string name="create_discussion_button">Создать беседу</string>
    <string name="discussion_creating">Создание беседы</string>
    <string name="discussion_name_hint">Введите название</string>
    <string name="upload_avatar">Загрузить аватарку</string>
    <string name="create">Создать</string>
    <string name="discussion_title">Название беседы</string>
    <string name="discussion_avatar">Аватар</string>
    <string name="change">Изменить</string>
    <string name="discussion_members">Участники</string>
    <string name="discussion_exclude">Исключить</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="add_members_button">+Добавить</string>
    <string name="excluded">Пользователь был исключен из беседы</string>
    <string name="add_members_title">Выберите друзей, которых хотите пригласить в беседу</string>
    <string name="add">Добавить</string>
    <string name="added">Добавлен</string>
    <string name="leave_discussion">Выйти из беседы</string>
    <string name="remove_discussion">Удалить беседу</string>
    <string name="left">Вы покинули беседу</string>
    <string name="removed">Беседа удалена</string>
    <string name="server_error">Возникла ошибка на стороне сервера. Попробуйте еще раз</string>

    <string name="cloud_title">Облачное хранилище</string>
    <string name="upload_file">Загрузить файлы</string>
    <string name="create_dir">Создать папку</string>
    <string name="create_folder">Создание папки</string>
    <string name="folder_name_hint">Название папки</string>
    <string name="download">Скачать</string>
    <string name="send_link">Отправить ссылку на файл</string>
    <string name="edit">Редактировать</string>
    <string name="file_title">Файл</string>
    <string name="file_name">Имя</string>
    <string name="file_type">Тип</string>
    <string name="file_size">Размер</string>
    <string name="audio">Аудиозапись</string>
    <string name="search_cancel">Отменить поиск</string>

    <string name="cloud_images">Изображения</string>
    <string name="cloud_videos">Видео</string>
    <string name="cloud_audios">Аудио</string>
    <string name="cloud_documents">Документы</string>
    <string name="cloud_other">Другое</string>
    <string name="file_sent">Файл отправлен</string>
    <string name="file_send_hint">Коснитесь тех, кому хотите отправить файл</string>
    <string name="open_file">Открыть файл</string>
    <string name="downloaded">Приложение загружено</string>
    <string name="open_write_review">Написать отзыв</string>
    <string name="write_review_hint">Напишите ваше мнение о приложении</string>
    <string name="write_review_cancel">Закрыть поле ввода</string>
    <string name="subscribed">Вы подписались</string>
    <string name="unsubscribed">Вы отписались</string>
    <string name="subscribe">+ Подписаться</string>
    <string name="unscribe">Отписаться</string>
    <string name="settings">Настройки</string>
    <string name="groups">Группы</string>
    <string name="create_group">Создать группу</string>
    <string name="create_public_title">Создание группы</string>
    <string name="create_public_name_field">Название группы</string>
    <string name="create_public_description_field">Введите описание</string>
    <string name="create_public_description_error">Введите описание</string>
    <string name="create_public_name_error">Введите описание</string>
    <string name="already_subscribed">Вы подписаны</string>
    <string name="subscribers">Подписчики</string>
    <string name="article_text_hint">Ваша статья</string>
    <string name="article_title_hint">Заголовок</string>
    <string name="update_public_title">Обновление группы</string>
    <string name="update_public_title_error">Введите название группы</string>

    <string name="default_notification_channel_id">YOUR_DEFAULT_CHANNEL_ID</string>

    <string name="no_internet_connection">Нет доступа в Интернет. Функция Offline-режим появится совсем скоро</string>
    <string name="settings_delete_profile">Удалить профиль</string>
    <string name="settings_change_password">Изменить пароль</string>
    <string name="old_password_hint">Введите пароль</string>
    <string name="new_password_hint">Введите новый пароль</string>
    <string name="choose_image_to_send">Выберите изображения, которые хотели бы отправить</string>
    <string name="choose_image">Выбрать изображение</string>
    <string name="forgot_password">Для восстановления доступа к аккаунту перейдите по ссылке из письма, которое пришло к вам на почту</string>
    <string name="forgot_your_password">Забыли пароль?</string>
    <string name="return_access">Восстановление доступа</string>
    <string name="button_continue">Продолжить</string>
</resources>