<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:background="@drawable/block"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/update_profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_profile_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14pt"
            android:shadowColor="@color/neon_blue"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="5"
            android:fontFamily="sans-serif-thin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_field"
            android:textColor="@color/neon_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_profile_title"
            android:textColorHint="@color/navy_neon"
            android:backgroundTint="@color/neon_blue"
            android:padding="20dp" />
        <EditText
            android:id="@+id/surname_field"
            android:textColor="@color/neon_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_surname_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_field"
            android:textColorHint="@color/navy_neon"
            android:backgroundTint="@color/neon_blue"
            android:padding="20dp" />

        <TextView
            android:id="@+id/date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:shadowColor="@color/neon_blue"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="5"
            android:text="@string/register_date_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="11pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/surname_field" />
        <EditText
            android:id="@+id/date_field"
            android:textColor="@color/neon_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_date_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_title"
            android:textColorHint="@color/neon_blue"
            android:backgroundTint="@color/neon_blue"
            android:padding="20dp" />
        <EditText
            android:id="@+id/email_field"
            android:textColor="@color/neon_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_field"
            android:textColorHint="@color/green_neon"
            android:backgroundTint="@color/neon_blue"
            android:padding="20dp" />

        <EditText
            android:id="@+id/country_field"
            android:textColor="@color/neon_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_country_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_field"
            android:textColorHint="@color/neon_blue"
            android:backgroundTint="@color/neon_blue"
            android:padding="20dp" />
        <EditText
            android:id="@+id/city_field"
            android:textColor="@color/neon_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_city_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country_field"
            android:textColorHint="@color/neon_blue"
            android:backgroundTint="@color/neon_blue"
            android:padding="20dp" />
        <LinearLayout
            android:id="@+id/update_profile_uploads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/city_field"
            app:layout_constraintStart_toStartOf="parent">
            <com.sanojpunchihewa.glowbutton.GlowButton
                android:id="@+id/update_profile_add_avatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/blue_empty_button"
                android:padding="15dp"
                android:text="@string/update_profile_add_avatar"
                android:textColor="@color/navy_neon"
                android:textFontWeight="100"
                android:textSize="6pt"
                android:layout_weight="1"
                app:buttonColor="@color/g_dark"
                app:glowColor="@color/navy_neon" />
            <com.sanojpunchihewa.glowbutton.GlowButton
                android:id="@+id/update_profile_add_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/blue_empty_button"
                android:padding="15dp"
                android:text="@string/update_profile_add_banner"
                android:textColor="@color/green_neon"
                android:textFontWeight="200"
                android:textSize="6pt"
                android:layout_weight="1"
                app:buttonColor="@color/g_dark"
                app:glowColor="@color/green_neon" />
        </LinearLayout>
        <EditText
            android:id="@+id/about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textColor="@color/neon_blue"
            android:textColorHint="@color/navy_neon"
            android:hint="@string/update_profile_hint"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@id/update_profile_uploads"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <com.sanojpunchihewa.glowbutton.GlowButton
            android:id="@+id/update_profile_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/blue_button"
            android:padding="20dp"
            android:text="@string/update_profile_button"
            android:textColor="@color/black"
            android:textFontWeight="200"
            android:textSize="15dp"
            android:onClick="register"
            app:buttonColor="@color/neon_blue"
            app:glowColor="@color/neon_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_me"
            tools:ignore="OnClick" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>