<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".SettingsActivity">
    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="15pt"
        android:textAlignment="center"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/white"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/settings_change_password_view"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:gravity="center">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/change_password"/>
        <TextView
            android:id="@+id/settings_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_change_password"
            android:textSize="10pt"
            android:textAlignment="textStart"
            android:textColor="@color/green_neon"
            android:padding="20dp" />
    </LinearLayout>

    
    <LinearLayout
        android:id="@+id/settings_delete_profile_view"
        app:layout_constraintTop_toBottomOf="@id/settings_change_password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:gravity="center">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/delete_profile"/>
        <TextView
            android:id="@+id/settings_delete_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_delete_profile"
            android:textSize="10pt"
            android:textAlignment="textStart"
            android:textColor="@color/red_neon"
            android:padding="20dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/old_password"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password_hint"
        android:textColor="@color/neon_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_delete_profile_view"
        android:textColorHint="@color/neon_blue"
        android:backgroundTint="@color/neon_blue"
        android:padding="20dp"
        android:layout_margin="20dp"/>
    <EditText
        android:id="@+id/new_password"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_hint"
        android:textColor="@color/neon_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/old_password"
        android:textColorHint="@color/neon_blue"
        android:backgroundTint="@color/neon_blue"
        android:padding="20dp"
        android:layout_margin="20dp"/>

    <com.sanojpunchihewa.glowbutton.GlowButton
        android:id="@+id/save_button"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/blue_button"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:text="@string/save_changes"
        android:textColor="@color/black"
        android:textFontWeight="200"
        android:textSize="8pt"
        app:buttonColor="@color/neon_blue"
        app:glowColor="@color/neon_blue"
        app:layout_constraintTop_toBottomOf="@id/new_password" />



    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentDetails"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        class="com.chatlog.chatlog.Navigation"/>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/notifications"
        class="com.chatlog.chatlog.Notifications"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>